--- a/src/buddyboss.pot
+++ b/src/buddyboss.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BuddyBoss Platform 1.0.0\n"
 "Report-Msgid-Bugs-To: https://www.buddyboss.com/contact/\n"
-"POT-Creation-Date: 2019-03-21 06:25:39+00:00\n"
+"POT-Creation-Date: 2019-03-21 10:07:14+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1083,7 +1083,7 @@ msgstr ""
 
 #: bp-activity/classes/class-bp-activity-list-table.php:630
 #: bp-core/bp-core-cssjs.php:171
-#: bp-templates/bp-nouveau/buddypress-functions.php:421
+#: bp-templates/bp-nouveau/buddypress-functions.php:432
 msgid "Are you sure?"
 msgstr ""
 
@@ -15160,26 +15160,26 @@ msgstr ""
 msgid "Try different keywords&hellip;"
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress-functions.php:419
+#: bp-templates/bp-nouveau/buddypress-functions.php:430
 msgid ""
 "As you are the only organizer of this group, you cannot leave it. You can "
 "either delete the group or promote another member to be an organizer first "
 "and then leave the group."
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress-functions.php:420
+#: bp-templates/bp-nouveau/buddypress-functions.php:431
 msgid "Are you sure you want to remove your connection with this member?"
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress-functions.php:422
+#: bp-templates/bp-nouveau/buddypress-functions.php:433
 msgid "Are you sure you want to delete this set? This cannot be undone."
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress-functions.php:423
+#: bp-templates/bp-nouveau/buddypress-functions.php:434
 msgid "Show all %d comments"
 msgstr ""
 
-#: bp-templates/bp-nouveau/buddypress-functions.php:424
+#: bp-templates/bp-nouveau/buddypress-functions.php:435
 msgid ""
 "Your profile has unsaved changes. If you leave the page, the changes will "
 "be lost."
@@ -16133,21 +16133,22 @@ msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2511
 msgid ""
-"By creating an account, you agree to our <a href=\"%s\" "
-"target=\"_blank\">Terms of Service</a>."
-msgstr ""
-
-#: bp-templates/bp-nouveau/includes/template-tags.php:2519
-msgid ""
-"By creating an account, you agree to our <a href=\"%s\" "
-"target=\"_blank\">Privacy Policy</a>."
+"By creating an account, you agree to our <a class=\"popup-modal "
+"popup-terms\" href=\"#terms-modal\">Terms of Service</a>."
 msgstr ""
 
 #: bp-templates/bp-nouveau/includes/template-tags.php:2527
 msgid ""
-"By creating an account, you agree to our <a href=\"%s\" "
-"target=\"_blank\">Terms of Service</a> and <a href=\"%s\" "
-"target=\"_blank\">Privacy Policy</a>."
+"By creating an account, you agree to our <a class=\"popup-modal-register "
+"popup-privacy\" href=\"#privacy-modal\">Privacy Policy</a>."
+msgstr ""
+
+#: bp-templates/bp-nouveau/includes/template-tags.php:2543
+msgid ""
+"By creating an account, you agree to our <a class=\"popup-modal-register "
+"popup-terms\" href=\"#terms-modal\">Terms of Service</a> and <a "
+"class=\"popup-modal-register popup-privacy\" "
+"href=\"#privacy-modal\">Privacy Policy</a>."
 msgstr ""
 
 #: bp-xprofile/bp-xprofile-activity.php:28
